gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag4479.d
version https://git-lfs.github.com/spec/v1
oid sha256:30d027f72a7d33ead57f524144bbf18b4aa14b7d0d8e4252288b85af5cfd99ef
size 290
